--- a/mandela_effect.org
+++ b/mandela_effect.org
@@ -549,3 +549,26 @@ width="512" data-original="https://pic1.zhimg.com/v2-1959405ee89645dab9190017ea5
 链接：https://www.zhihu.com/question/60235732/answer/513219007
 来源：知乎
 著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+
+
+
+2019.12.02更新：
+“具”之前是两横！（就算是曼德拉效应，更新过后依然是两横！），但现在我突然发现变成三横了！！！！！
+
+备注2019.12.09：
+“目”，“县”是两横，放在这里备注下，看以后会不会变成三横！！！哈哈！
+
+
+
+
+
+
+
+
+2020.01.19：
+
+天降大任于（）人也   填空！！！
+
+以前是“斯”，现在是“是”！！！！
+
+https://tieba.baidu.com/p/6441446783?pn=1
